# vas_fno_atlag_csokkeno

./: README.md  package.xml  setup.cfg  setup.py
launch/: array.launch.py
resource/: vas_fno_atlag_csokkeno
vas_fno_atlag_csokkeno/: array_publisher.py  array_range.py  array_sorter.py
vas_fno_kisprojekt/: array_averager.py
vas_fno_kisprojekt/launch/: array.launch.py
